# influ-rader

./: .editorconfig  .env.example  .gitignore  Makefile  Procfile  README.md  config.toml.example  pyproject.toml
influ_rader/: bot.py  config.py  db.py  error.py  main.py  twitter.py
influ_rader/cogs/: twitter_cog.py
influ_rader/tests/: test_twitter.py
